[package]
name = "share_memory"
version = "0.1.1"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "This is share memory impl multi process for rust"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/share_memory"
repository = "https://github.com/tickbh/ShareMemory"
readme = "README.md"
keywords = ["memory", "process", "multi_process", "cross_platform", "shmget"]

[dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["winuser", "memoryapi", "winbase", "errhandlingapi", "handleapi", "minwinbase", "minwindef" ] }

[dev-dependencies]
time = "0.1.39"